.metadata/.plugins/org.eclipse.cdt.ui/UART_INTR_TRANSMIT.build.log
12:15:17 **** Incremental Build of configuration Debug for project UART_INTR_TRANSMIT ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:165:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  165 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:198:13: error: invalid storage class for function 'MX_GPIO_Init'
  198 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:247:1: error: expected declaration or statement at end of input
  247 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_USART2_UART_Init' used but never defined
   52 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:238:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  238 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:198:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  198 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:165:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  165 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:118:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  118 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

12:15:18 Build Failed. 4 errors, 6 warnings. (took 591ms)

